# tvlfyi_depot

./: +bindings.el  +commands.el  .bash_profile  .elpaignore  .envrc  .escape_codes_bash.py  .escape_codes_url.py  .git-blame-ignore-revs  .git_functions.sh  .gitignore  .gitmodules  .gitreview  .js_to_bash.sh  .mailmap  .misc_functions.sh  .rgignore  .rustfmt.toml  .swp  .vimrc  .w_aliases.sh  .w_functions.sh  .zsh_profile  AUTHORS  CMakeLists.txt  Cargo.toml  Default (OSX).sublime-keymap  LICENSE  Makefile  OWNERS  Preferences.sublime-settings  README  README.md  RULES  Tupfile  Tuprules.tup  WORKSPACE  aliases.sh  bookmarks.txt  brew_packages.txt  buf.gen.yaml  (+96 more)
corp/rih/: .gitignore  Cargo.toml  README.md  default.nix  index.css  index.html
corp/rih/backend/: Cargo.toml  default.nix
corp/rih/frontend/: Cargo.toml  default.nix  index.css  index.html  privacy-policy.html
corp/rih/src/: home.html  main.rs  privacy-policy.md
corp/rih/static-markdown/: Cargo.toml
corp/tvixbolt/: Cargo.toml  default.nix  index.html
corp/tvixbolt/src/: main.rs
finito-postgres/: Cargo.toml
finito-postgres/migrations/2018-09-26-160621_bootstrap_finito_schema/: down.sql  up.sql
finito-postgres/src/: error.rs  lib.rs  tests.rs
fun/paroxysm/: .gitignore  Cargo.nix  Cargo.toml  OWNERS  README.md  default.nix
fun/paroxysm/docker/: default.nix
fun/paroxysm/src/: cfg.rs  keyword.rs  main.rs  models.rs  schema.rs
fun/tvldb/: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  default.nix
fun/tvldb/docker/: default.nix
fun/tvldb/src/: cfg.rs  keyword.rs  main.rs  models.rs
net/alcoholic_jwt/: Cargo.toml  README.md  default.nix
net/alcoholic_jwt/src/: lib.rs  tests.rs
net/crimp/: Cargo.toml  README.md  default.nix
net/crimp/src/: lib.rs  tests.rs
ops/journaldriver/: Cargo.toml  build.rs  default.nix
ops/journaldriver/src/: main.rs  tests.rs
ops/posix_mq.rs/: Cargo.toml  README.md
ops/posix_mq.rs/src/: error.rs  lib.rs  tests.rs
ops/yandex-cloud-rs/: Cargo.toml  README.md  build.rs  default.nix
ops/yandex-cloud-rs/src/: lib.rs
tvix/: .dockerignore  .envrc  Cargo.nix  Cargo.toml  Dockerfile  README.md  buildkite.yml  clippy.toml  crate-hashes.json  default.nix  example.nix  readtree.nix  shell.nix  utils.nix
tvix/boot/: README.md  default.nix
tvix/boot/tests/: default.nix
tvix/build-go/: README.md  build.pb.go  default.nix  rpc_build.pb.go
tvix/castore/: Cargo.toml  build.rs  default.nix
tvix/castore-go/: castore.pb.go  default.nix  rpc_blobstore.pb.go  rpc_chunkstore.pb.go  rpc_chunkstore_grpc.pb.go  rpc_directory.pb.go
tvix/castore/benches/: ingestion.rs
tvix/castore/docs/: blobstore-chunking.md  blobstore-protocol.md  verified-streaming.md
tvix/castore/protos/: castore.go  castore.pb.go  castore.proto  default.nix  rpc_blobstore.proto  rpc_chunkstore.proto  rpc_directory.proto
tvix/castore/src/: composition.rs  digests.rs  errors.rs  fixtures.rs  import.rs  lib.rs  path.rs  refscan.rs  tonic.rs  utils.rs
tvix/cli/: Cargo.toml  build.sh  default.nix
tvix/cli/src/: args.rs  assignment.rs  derivation.rs  errors.rs  fetchurl.nix  known_paths.rs  lib.rs  main.rs  nix_compat.rs  refscan.rs  repl.rs  tvix_io.rs  tvix_store_io.rs
tvix/cli/tests/: repl.rs
tvix/crates/tvix/: Cargo.toml
tvix/derivation/: Cargo.toml
tvix/derivation/src/: derivation.rs  errors.rs  lib.rs  nix_hash.rs  output.rs  validate.rs  write.rs
tvix/derivation/test_data/: m1vfixn8iprlf0v9abmlrz7mjw1xj8kp-cp1252.drv.json  m1vfixn8iprlf0v9abmlrz7mjw1xj8kp-cp1252.drv.json_back
tvix/doc/: .gitignore  Makefile  components.md  default.nix
tvix/docs/: book.toml  components.md  default.nix  differences-drv-paths.md  language-spec.md  mdbook-extra.js  value-pointer-equality.md
tvix/docs/src/: SUMMARY.md  TODO.md  getting-started.md  introduction.md
tvix/eval/: .gitignore  Cargo.toml  README.md  build.rs  crate.nix  default.nix  demo.nix  nixpkgs.patch  shell.nix  x.nix
tvix/eval/benches/: eval.rs
tvix/eval/builtin-macros/: Cargo.toml  default.nix
tvix/eval/docs/: bindings.md  build-references.md  builtins.md  catchable-errors.md  known-optimisation-potential.md  recursive-attrs.md  thread-local-vm.md  vm-loop.md
tvix/eval/opcode-macros/: Cargo.toml
tvix/eval/proptest-regressions/: opcode.txt
tvix/eval/src/: .observer.rs.swp  chunk.rs  compiler.rs  errors.rs  eval.rs  io.rs  lib.rs  main.rs  nix_path.rs  nix_search_path.rs  observer.rs  vm.rs  (+11 more)
tvix/glue/: Cargo.toml  build.rs  default.nix
tvix/grpcweb/: default.nix  head.js  package-lock.json  package.json  scratch.html
tvix/nar-bridge/: Cargo.toml  default.nix  go.mod  go.sum  log
tvix/nar-bridge-go/: default.nix
tvix/nar_bridge/: Cargo.toml  build.rs  default.nix  shell.nix
tvix/nix-compat/: Cargo.toml  build.rs  default.nix
tvix/nix-compat-derive/: Cargo.toml  default.nix
tvix/nix-compat-derive-tests/: Cargo.toml  default.nix
tvix/nix-daemon/: Cargo.toml  default.nix
tvix/nix-lang-test-suite/: README.md
tvix/nix-serialize/: Cargo.toml  default.nix
tvix/nix-serialize-derive/: Cargo.toml  default.nix
tvix/nix-serialize-derive-tests/: Cargo.toml  default.nix
tvix/proto/: Cargo.toml  build.rs  castore.proto  default.nix  evaluator.proto  pathinfo.proto  rpc_blobstore.proto  rpc_directory.proto  rpc_pathinfo.proto
tvix/py-nix-compat/: Cargo.toml  chase.py  pyproject.toml
tvix/scripts/: bench-windtunnel.sh  bench.sh
tvix/serde/: Cargo.toml  default.nix
tvix/shell/: Cargo.toml
tvix/store/: .gitignore  Cargo.toml  README.md  build.rs  crate.nix  default.nix
tvix/store-go/: default.nix  go.mod  go.sum  pathinfo.pb.go  rpc_pathinfo.pb.go  rpc_pathinfo_grpc.pb.go
tvix/store-viz/: Cargo.toml
tvix/tests/: README.md  default.nix  tvix-init.go
tvix/tracing/: Cargo.toml  default.nix
tvix/tvixbolt/: Cargo.toml  default.nix
tvix/verify-lang-tests/: default.nix
tvix/website/: default.nix  landing-en.md
web/converse/: Cargo.toml  README.md  default.nix
web/pwcrypt/: Cargo.toml  default.nix  index.html
web/tvixbolt/: Cargo.nix  Cargo.toml  default.nix  index.css  index.html
(+5231 files in other folders)
