[package]
name = "finito-postgres"
version = "0.1.0"
authors = ["Vincent Ambo <mail@tazj.in>"]

[dependencies]
chrono = "0.4"
postgres-derive = "0.3"
serde = "1.0"
serde_json = "1.0"
r2d2_postgres = "0.14"

[dependencies.postgres]
version = "0.15"
features = [ "with-uuid", "with-chrono", "with-serde_json" ]

[dependencies.uuid]
version = "0.5"
features = [ "v4" ]

[dependencies.finito]
path = "../finito-core"

[dev-dependencies.finito-door]
path = "../finito-door"
