# This Cargo file is a workspace configuration as per
# https://doc.rust-lang.org/book/ch14-03-cargo-workspaces.html
#
# We add this file to get a coherent set of dependencies across Tvix
# crates by sharing a Cargo.lock. This is necessary because of the
# currently limited support for Rust builds in Nix.
#
# Note that this explicitly does *not* mean that //tvix should be
# considered "one project": This is simply a workaround for a
# technical limitation and it should be our aim to remove this
# workspace file and make the subprojects independent.
#
# Note also that CI targets for actual projects should *not* be tied
# to //tvix, but to its subprojects. A potential file at
# //tvix/default.nix should likely *not* expose anything other than
# extra steps or other auxiliary targets.

[workspace]
resolver = "2"

members = [
  "build",
  "castore",
  "cli",
  "eval",
  "eval/builtin-macros",
  "glue",
  "nar-bridge",
  "nix-compat",
  "serde",
  "store",
  "tracing",
]

[workspace.lints.clippy]
# Allow blocks_in_conditions due to false positives with #[tracing::instrument(…)]:
# https://github.com/rust-lang/rust-clippy/issues/12281
blocks_in_conditions = "allow"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = "warn"
redundant_pub_crate = "allow"         # has a lot of FPs
too_many_lines = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
future_not_send = "allow"
unused_async = "allow"
module_name_repetitions = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
implicit_hasher = "allow"
struct_excessive_bools = "allow"
cognitive_complexity = "allow"
cast_ptr_alignment = "allow"
fallible_impl_from = "allow"
should_panic_without_expect = "allow"
inline_always = "allow"

[workspace.lints.rust]
dead_code = "allow"

# Add a profile to all targets that enables release optimisations, but
# retains debug symbols. This is great for use with
# benchmarking/profiling tools.
[profile.release-with-debug]
inherits = "release"
debug = true

[patch.crates-io]
# https://github.com/hyperium/tonic/commit/626b094754cc52973adbfc8d2b9790701d54ef84
tonic = { git = "https://github.com/hyperium/tonic/" }
tonic-build = { git = "https://github.com/hyperium/tonic/" }
tonic-reflection = { git = "https://github.com/hyperium/tonic/" }
tonic-health = { git = "https://github.com/hyperium/tonic/" }
test-strategy = { git = "https://github.com/thecaralice/test-strategy", branch = "struct-init-tvix" }
