[package]
version = "0.1.0"
name = "rih"
authors = [ "Vincent Ambo <tazjin@tvl.su>" ]
license = "Proprietary"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.10.0"

# needs to be in sync with nixpkgs
wasm-bindgen = "= 0.2.84"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
