[package]
version = "0.1.0"
name = "rih"
authors = [ "Vincent Ambo <tazjin@tvl.su>" ]
license = "Proprietary"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
serde_urlencoded = "*" # pinned by yew

# needs to be in sync with nixpkgs
wasm-bindgen = "= 0.2.84"

[dependencies.serde]
version = "*" # pinned by yew
features = [ "derive" ]

[dependencies.web-sys]
version = "*" # pinned by yew
features = [ "HtmlDetailsElement" ]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
