[package]
name = "tvixbolt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16"
codemap = "0.1.3"
serde_urlencoded = "*" # pinned by yew
web-sys = "*" # pinned by yew

# needs to be in sync with nixpkgs
wasm-bindgen = "= 0.2.82"

[dependencies.rnix]
git = "https://github.com/nix-community/rnix-parser.git"
rev = "97b438e34be5211a4b48aeed9cc3ded489b4d6da"

[dependencies.tvix-eval]
path = "../../tvix/eval"
default-features = false

[dependencies.serde]
version = "*" # pinned by yew
features = [ "derive" ]
