[package]
name = "tvixbolt"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19.3"
yew-router = "0.16"
codemap = "0.1.3"
serde_urlencoded = "*" # pinned by yew
rnix = "0.11.0"

# needs to be in sync with nixpkgs
wasm-bindgen = "= 0.2.89"

[dependencies.tvix-eval]
path = "../../tvix/eval"
default-features = false

[dependencies.serde]
version = "*" # pinned by yew
features = [ "derive" ]

[dependencies.web-sys]
version = "*" # pinned by yew
features = [ "HtmlDetailsElement" ]
