[package]
authors = ["eeeeeta <eta@theta.eu.org>"]
edition = "2018"
name = "paroxysm"
version = "0.1.0"

[dependencies]
chrono = "0.4"
config = "0.9"
env_logger = "0.6"
failure = "0.1"
irc = "0.13"
lazy_static = "1.2"
log = "0.4"
rand = "0.7"
regex = "1.1"
serde = { version = "1.0", features = [ "derive" ] }

[dependencies.diesel]
features = ["postgres", "chrono", "r2d2"]
version = "1.3"
