[package]
authors = ["eeeeeta <eta@theta.eu.org>"]
edition = "2018"
name = "paroxysm"
version = "0.1.0"

[dependencies]
chrono = "0.4.6"
config = "0.9.1"
env_logger = "0.6.0"
failure = "0.1.3"
irc = "0.13.6"
lazy_static = "1.2.0"
log = "0.4.6"
rand = "0.7.3"
regex = "1.1.0"
serde = "1.0.81"
serde_derive = "1.0.81"

[dependencies.diesel]
features = ["postgres", "chrono", "r2d2"]
version = "1.3.3"
