[package]
name = "alcoholic_jwt"
description = "Library for validation of RS256 JWTs"
version = "1.0.1"
authors = ["Vincent Ambo <mail@tazj.in>"]
keywords = ["jwt", "token", "jwks"]
categories = ["authentication"]
license = "GPL-3.0-or-later"
repository = "https://code.tvl.fyi/tree/net/alcoholic_jwt"

[dependencies]
base64 = "0.10"
openssl = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
