[package]
name = "alcoholic_jwt"
description = "Library for validation of RS256 JWTs"
version = "4084.0.0"
authors = ["Vincent Ambo <tazjin@tvl.su>"]
keywords = ["jwt", "token", "jwks"]
categories = ["authentication"]
license = "GPL-3.0-or-later"
homepage = "https://code.tvl.fyi/about/net/alcoholic_jwt"
repository = "https://code.tvl.fyi/depot.git:/net/alcoholic_jwt.git"

[dependencies]
base64 = "0.10"
openssl = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
