[package]
name = "crimp"
description = "Higher-level Rust API for cURL bindings"
version = "4087.0.0"
authors = ["Vincent Ambo <tazjin@tvl.su>"]
keywords = [ "http", "curl" ]
categories = [ "api-bindings" ]
license = "GPL-3.0-or-later"
homepage = "https://code.tvl.fyi/about/net/crimp"
repository = "https://code.tvl.fyi/depot.git:/net/crimp.git"


[features]
default = [ "json" ]
json = [ "serde", "serde_json"]

[dependencies]
curl = "0.4"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
