[package]
name = "journaldriver"
version = "1.1.0"
authors = ["Vincent Ambo <mail@tazj.in>"]
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = [ "serde" ]}
env_logger = "0.5"
lazy_static = "1.0"
log = "0.4"
medallion = "2.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
systemd = "0.3"
ureq = { version = "0.6.2", features = [ "json" ]}

[build-dependencies]
pkg-config = "0.3"
