[package]
name = "journaldriver"
version = "1.1.0"
authors = ["Vincent Ambo <mail@tazj.in>"]
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
anyhow = "1.0"
crimp = "4087.0"
env_logger = "0.10"
lazy_static = "1.4"
log = "0.4"
medallion = "2.5"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
systemd = "0.5"
time = { version = "0.3", features = [ "serde-well-known", "macros" ]}

[build-dependencies]
pkg-config = "0.3"
