[package]
name = "yandex-cloud"
description = "Generated gRPC clients for the Yandex Cloud API"
version = "2023.4.24"
edition = "2021"

[dependencies]
prost = "0.11"
prost-types = "0.11"

[dependencies.tonic]
version = "0.9"
features = [ "tls", "tls-roots", "gzip" ]

[build-dependencies]
tonic-build = "0.9"
walkdir = "2.3.3"
