[package]
name = "derivation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = { version = "1.3.1", features = ["rayon", "std"] }
glob = "0.3.0"
maplit = "1.0.2"
prost = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.8.2"

[build-dependencies]
prost-build = "0.11.2"
tonic-build = "0.8.2"
