[package]
name = "nar-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["http2"] }
axum-prometheus = "0.7.0"
bytes = "1.4.0"
clap = { version = "4.0", features = ["derive", "env"] }
data-encoding = "2.3.3"
futures = "0.3.30"
itertools = "0.12.0"
lru = "0.12.3"
nix-compat = { path = "../nix-compat", features = ["async"] }
parking_lot = "0.12.3"
prost = "0.13.1"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.32.0" }
tokio-listener = { version = "0.4.2", features = [ "axum07", "clap", "multi-listener", "sd_listen" ] }
tokio-util = { version = "0.7.9", features = ["io", "io-util", "compat"] }
tonic = { version = "0.12.0", features = ["tls", "tls-roots"] }
tower = "0.4.13"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tvix-castore = { path = "../castore" }
tvix-store = { path = "../store" }
tvix-tracing = { path = "../tracing", features = ["tonic", "axum"] }
url = "2.4.0"

[build-dependencies]
prost-build = "0.13.1"
tonic-build = "0.12.0"

[features]
default = ["otlp"]
otlp = ["tvix-tracing/otlp"]

[dev-dependencies]
hex-literal = "0.4.1"
rstest = "0.19.0"

[lints]
workspace = true
