[package]
name = "tvix-nar-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
blake3 = { version = "1.3.1", features = ["rayon", "std"] }
hex-literal = "0.3.4"
narinfo = "1.0.1"
nix-nar = "0.2.0"
prost = "0.11.0"
prost-types = "0.11.1"
sha2 = "0.10.6"
tvix-store = { path = "../store" }
