[package]
name = "nar_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
blake3 = { version = "1.3.1", features = ["rayon", "std"] }
hex-literal = "0.3.4"
narinfo = "1.0.1"
nix-nar = "0.2.0"
prost = "0.11.0"
prost-types = "0.11.1"
sha2 = "0.10.6"
tonic = "0.8.2"
tonic-health = "0.7.1"
tonic-types = "0.6.0"


[build-dependencies]
prost-build = "0.11.1"
tonic-build = "0.8.2"
