[package]
name = "nix-compat-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.86",  features = ["proc-macro"] }
quote = { version = "1.0.36", features = ["proc-macro"] }
syn = { version = "2.0.68", features = ["clone-impls", "derive", "parsing", "printing", "proc-macro"] }


[dev-dependencies]
hex-literal = "0.4.1"
pretty_assertions = "1.4.0"
rstest = "0.19.0"
tokio-test = "0.4.3"
trybuild = "1.0.96"

[dev-dependencies.nix-compat]
version = "0.1.0"
path = "../nix-compat"
features = ["test", "wire"]

[dev-dependencies.tokio]
version = "^1.38"
features = ["io-util", "macros"]
