[package]
name = "nix-serialize-derive-tests"
version = "0.1.0"
edition = "2021"

[features]
compile-tests = []

[dev-dependencies]
hex-literal = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
tokio-test = { workspace = true }
trybuild = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros"] }

nix-serialize = { path = "../nix-serialize", features = ["derive", "test"]}
