[package]
name = "tvix-serde"
version = "0.1.0"
edition = "2021"

[dependencies]
tvix-eval = { path = "../eval" }
tvix-glue = { path = "../glue" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = "1.28.0"
tvix-store = { path = "../store", default-features = false, features = []}
