[package]
name = "tvix-store"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = { version = "1.3.1", features = ["rayon", "std"] }
clap = { version = "4.0.26", features = ["derive", "env", "unicode"] }
futures = "0.3.25"
hex = "0.4.3"
prost = "0.11.2"
tempfile = "3.1.1"
tokio =  { version = "1.22.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.11"
tonic = "0.8.2"
tonic-mock = {git = "https://github.com/brainrake/tonic-mock", branch = "bump-dependencies" }

[build-dependencies]
prost-build = "0.11.2"
tonic-build = "0.8.2"
