[package]
name = "tvix-store"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
blake3 = { version = "1.3.1", features = ["rayon", "std"] }
clap = { version = "4.0", features = ["derive", "env"] }
count-write = "0.1.0"
data-encoding = "2.3.3"
lazy_static = "1.4.0"
nix-compat = { path = "../nix-compat" }
prost = "0.11.2"
rayon = "1.6.1"
sha2 = "0.10.6"
sled = { version = "0.34.7", features = ["compression"] }
thiserror = "1.0.38"
tokio-stream = "0.1.14"
tokio = { version = "1.28.0", features = ["fs", "net", "rt-multi-thread", "signal"] }
tonic = "0.8.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
walkdir = "2.4.0"
tokio-util = { version = "0.7.8", features = ["io", "io-util"] }
tower = "0.4.13"
futures = "0.3.28"
bytes = "1.4.0"
smol_str = "0.2.0"
serde_json = "1.0"
url = "2.4.0"
pin-project-lite = "0.2.13"
const-zero = "0.1.1"
parking_lot = { version = "0.12.1" }

[dependencies.fuse-backend-rs]
optional = true
# TODO: Switch back to upstream version once https://github.com/cloud-hypervisor/fuse-backend-rs/pull/153 lands.
git = "https://github.com/cbrewster/fuse-backend-rs.git"
branch = "optional-allow_other"
# Ideally this would only be enabled if virtiofs is enabled
# Ex: virtiofs = [..., "fuse-backend-rs/?vhost-user-fs", ...]
# However, crate2nix doesn't properly understand this syntax and doesn't
# enable this feature properly.
features = ["vhost-user-fs"]

[dependencies.vhost]
optional = true
version = "0.6"

[dependencies.vhost-user-backend]
optional = true
version = "0.8"

[dependencies.virtio-queue]
optional = true
version = "0.7"

[dependencies.vm-memory]
optional = true
version = "0.10"

[dependencies.vmm-sys-util]
optional = true
version = "0.11"

[dependencies.virtio-bindings]
optional = true
version = "0.2.1"

[dependencies.tonic-reflection]
optional = true
version = "0.5.0"

[dependencies.libc]
optional = true
version = "0.2.144"

[build-dependencies]
prost-build = "0.11.2"
tonic-build = "0.8.2"

[dev-dependencies]
test-case = "2.2.2"
tempfile = "3.3.0"
tonic-mock = { git = "https://github.com/brainrake/tonic-mock", branch = "bump-dependencies" }

[features]
default = ["fuse", "virtiofs", "reflection"]
fs = ["dep:libc", "dep:fuse-backend-rs"]
virtiofs = ["fs", "dep:vhost", "dep:vhost-user-backend", "dep:virtio-queue", "dep:vm-memory", "dep:vmm-sys-util", "dep:virtio-bindings"]
fuse = ["fs"]
reflection = ["tonic-reflection"]
