[package]
name = "pwcrypt"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.0"
getrandom = { version = "0.2.10", features = ["js"] }
gloo = "0.8.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
wasm-bindgen = "= 0.2.89"
web-sys = "0.3"
yew = { version = "0.20.0", features = [ "csr" ]}
