[package]
name = "tvixbolt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = "0.19.3"
yew-router = "0.16"
tvix-eval = { path = "../../tvix/eval", default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
web-sys = { version = "0.3.69", features = ["HtmlDetailsElement"] }
wasm-bindgen = "0.2.92"
