[package]
name = "rih-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
attohttpc = "0.22"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.96"
tonic = "0.9.2"
uuid = { version = "1.3.3", features = ["v4", "serde"] }

[dependencies.rouille]
version = "3.6"
default-features = false

[dependencies.rust-s3]
version = "0.33"
default_features = false
features = [ "sync-native-tls" ]
