[package]
name = "rih-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
uuid = { version = "1.3.3", features = ["v4", "serde"] }

[dependencies.rouille]
version = "3.6"
default-features = false

[dependencies.rust-s3]
version = "0.33"
default-features = false
features = [ "sync-rustls-tls" ]
