[package]
version = "0.1.0"
name = "rih"
authors = [ "Vincent Ambo <tazjin@tvl.su>" ]
license = "Proprietary"
edition = "2021"

[dependencies]
fuzzy-matcher = "0.3.7"
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.8"
js-sys = "0.3"
rand = "0.8"
rust_iso3166 = "0.1.10"
serde_json = "1.0"
serde_urlencoded = "*" # pinned by yew
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
wasm-bindgen-futures = "0.4"

# needs to be in sync with nixpkgs
wasm-bindgen = "= 0.2.88"
uuid = { version = "1.3.3", features = ["v4", "serde"] }

[dependencies.serde]
version = "*" # pinned by yew
features = [ "derive" ]

[dependencies.web-sys]
version = "*" # pinned by yew
features = [ "HtmlDetailsElement" ]

[dependencies.static_markdown]
path = "./static-markdown"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
